--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -5,10 +5,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
 
 jobs:
   ubuntu-build:
-    name: Ubuntu build
+    name: Ubuntu build with jackaudio
     runs-on: ubuntu-latest
 
     steps:
@@ -22,9 +23,9 @@ jobs:
       - name: build
         run: |
           cd cpp_version
-          make BUILDDIR=../build/Ubuntu/ DEFAULTWAVE=SINE
-          make BUILDDIR=../build/Ubuntu/ DEFAULTWAVE=PULSES
-          make BUILDDIR=../build/Ubuntu/ DEFAULTWAVE=TRIANGLES
+          make WITH_JACKAUDIO=YES BUILDDIR=../build/Ubuntu/ DEFAULTWAVE=SINE
+          make WITH_JACKAUDIO=YES BUILDDIR=../build/Ubuntu/ DEFAULTWAVE=PULSES
+          make WITH_JACKAUDIO=YES BUILDDIR=../build/Ubuntu/ DEFAULTWAVE=TRIANGLES
       - name: make things easy for the non devs
         run: |
           cd build/Ubuntu
@@ -38,7 +39,7 @@ jobs:
   macos-x-build:
     runs-on: macOS-latest
     needs: ubuntu-build
-    name: Mac OS X build
+    name: Mac OS X build with jackaudio
     steps:
       - uses: actions/checkout@v3
       - name: environement
@@ -55,12 +56,76 @@ jobs:
       - name: build
         run: |
           cd cpp_version
-          make BUILDDIR=../build/MacOS/ DEFAULTWAVE=SINE
-          make BUILDDIR=../build/MacOS/ DEFAULTWAVE=PULSES
-          make BUILDDIR=../build/MacOS/ DEFAULTWAVE=TRIANGLES
+          #make WITH_JACKAUDIO=YES BUILDDIR=../build/MacOS/ DEFAULTWAVE=SINE
+          #make WITH_JACKAUDIO=YES BUILDDIR=../build/MacOS/ DEFAULTWAVE=PULSES
+          #make WITH_JACKAUDIO=YES BUILDDIR=../build/MacOS/ DEFAULTWAVE=TRIANGLES
       - name: make things easy for the non devs
         run: |
           cd build/MacOS
+          #tar -cf The_objects_files.tar *.o
+          #rm *.o
+      - name: return workflow as artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: multisignalgene_build
+          path: build
+
+  ubuntu-build-without-jackaudio:
+    name: Ubuntu build without
+    runs-on: ubuntu-latest
+    needs: macos-x-build
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: setup build folders
+        run: |
+          mkdir build
+          mkdir build/Ubuntu_without_jackaudio
+      - name: get workflow as artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: multisignalgene_build
+          path: build
+      - name: build
+        run: |
+          cd cpp_version
+          make WITH_JACKAUDIO=NO BUILDDIR=../build/Ubuntu_without_jackaudio/ DEFAULTWAVE=SINE
+          make WITH_JACKAUDIO=NO BUILDDIR=../build/Ubuntu_without_jackaudio/ DEFAULTWAVE=PULSES
+          make WITH_JACKAUDIO=NO BUILDDIR=../build/Ubuntu_without_jackaudio/ DEFAULTWAVE=TRIANGLES
+      - name: make things easy for the non devs
+        run: |
+          cd build/Ubuntu_without_jackaudio
+          tar -cf The_objects_files.tar *.o --remove-files
+      - name: return workflow as artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: multisignalgene_build
+          path: build
+
+  macos-x-build-without-jackaudio:
+    runs-on: macOS-latest
+    needs: ubuntu-build-without-jackaudio
+    name: Mac OS X build without
+    steps:
+      - uses: actions/checkout@v3
+      - name: setup build folders
+        run: |
+          mkdir build
+          mkdir build/MacOS_without_jackaudio
+      - name: get workflow as artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: multisignalgene_build
+          path: build
+      - name: build
+        run: |
+          cd cpp_version
+          make WITH_JACKAUDIO=NO BUILDDIR=../build/MacOS_without_jackaudio/ DEFAULTWAVE=SINE
+          make WITH_JACKAUDIO=NO BUILDDIR=../build/MacOS_without_jackaudio/ DEFAULTWAVE=PULSES
+          make WITH_JACKAUDIO=NO BUILDDIR=../build/MacOS_without_jackaudio/ DEFAULTWAVE=TRIANGLES
+      - name: make things easy for the non devs
+        run: |
+          cd build/MacOS_without_jackaudio
           tar -cf The_objects_files.tar *.o
           rm *.o
       - name: return workflow as artifacts
@@ -69,10 +134,10 @@ jobs:
           name: multisignalgene_build
           path: build
 
-  windows-build:
+  windows-build-without-jackaudio:
     runs-on: ubuntu-latest
-    needs: macos-x-build
-    name: Windows build
+    needs: macos-x-build-without-jackaudio
+    name: Windows build without
     steps:
       - uses: actions/checkout@v3
       - name: get workflow as artifacts
@@ -87,11 +152,18 @@ jobs:
       - name: setup build folders
         run: |
           mkdir build
-          mkdir build/Windows
+          mkdir build/Windows_without_jackaudio
       - name: build
         run: |
           cd cpp_version
-          make CXX=x86_64-w64-mingw32-gcc BUILDDIR=../build/Windows/
+          make CXX=x86_64-w64-mingw32-gcc WITH_JACKAUDIO=NO  BUILDDIR=../build/Windows_without_jackaudio/ DEFAULTWAVE=SINE
+          make CXX=x86_64-w64-mingw32-gcc WITH_JACKAUDIO=NO  BUILDDIR=../build/Windows_without_jackaudio/ DEFAULTWAVE=PULSES
+          make CXX=x86_64-w64-mingw32-gcc WITH_JACKAUDIO=NO  BUILDDIR=../build/Windows_without_jackaudio/ DEFAULTWAVE=TRIANGLES
+      - name: make things easy for the non devs
+        run: |
+          cd build/Windows_without_jackaudio
+          tar -cf The_objects_files.tar *.o
+          rm *.o
       - name: return workflow as artifacts
         uses: actions/upload-artifact@v3
         with:
