Some cleanup, no new feature
The super_hash has been removed, as now a tuple can be the key of a map
Some naming has been cleaned up. Some dead (old) code has been removed

--- a/cpp_version/Makefile
+++ b/cpp_version/Makefile
@@ -2,7 +2,7 @@ CXX?=g++
 CXXFLAGS?=-O2
 LDFLAGS?=
 DEFAULTWAVE?=SINE
-WITH_JACKAUDIO?=NO
+WITH_JACKAUDIO?=YES
 CXX_Version?=-std=c++17
 SRCDIR?=
 BUILDDIR?=
