Some cleanups, no new feature
Some functions moved into constexpr.
Compilation sightly speed up by irrelevant includes removed
Makefile dependencies improved

--- a/cpp_version/Makefile
+++ b/cpp_version/Makefile
@@ -28,7 +28,7 @@ endif
 $(BUILDDIR)amplitude_handler.o		:	$(SRCDIR)amplitude_handler.hxx $(SRCDIR)amplitude_handler.cpp
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)amplitude_handler.o $(SRCDIR)amplitude_handler.cpp
 
-$(BUILDDIR)modulation_handler.o		:	$(SRCDIR)modulation_handler.hxx $(SRCDIR)modulation_handler.cpp
+$(BUILDDIR)modulation_handler.o		:	$(SRCDIR)modulation_handler.hxx $(SRCDIR)modulation_handler.cpp $(SRCDIR)sample_step.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)modulation_handler.o $(SRCDIR)modulation_handler.cpp
 
 $(BUILDDIR)frequency_handler.o		:	$(SRCDIR)frequency_handler.hxx $(SRCDIR)frequency_handler.cpp
@@ -37,13 +37,13 @@ $(BUILDDIR)frequency_handler.o		:	$(SRCDIR)frequency_handler.hxx $(SRCDIR)freque
 $(BUILDDIR)sample_step.o			:	$(SRCDIR)sample_step.hxx $(SRCDIR)sample_step.cpp $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)sample_step.o $(SRCDIR)sample_step.cpp
 
-$(BUILDDIR)bundle_signals.o		:	$(SRCDIR)bundle_signals.hxx	$(SRCDIR)bundle_signals.cpp $(SRCDIR)sample_step.hxx $(SRCDIR)parameters.hxx $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx
+$(BUILDDIR)bundle_signals.o		:	$(SRCDIR)bundle_signals.hxx	$(SRCDIR)bundle_signals.cpp $(SRCDIR)sample_step.hxx $(SRCDIR)parameters.hxx $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx $(SRCDIR)modulation_handler.cpp
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)bundle_signals.o $(SRCDIR)bundle_signals.cpp
 
-$(BUILDDIR)main_loop_DW_$(DEFAULTWAVE).o		:	$(SRCDIR)main_loop.hxx	$(SRCDIR)main_loop.cpp $(SRCDIR)sample_step.hxx $(SRCDIR)parameters.hxx $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx $(SRCDIR)sound_file_output.hxx $(SRCDIR)sound_output_buffer.hxx
+$(BUILDDIR)main_loop_DW_$(DEFAULTWAVE).o		:	$(SRCDIR)main_loop.hxx	$(SRCDIR)main_loop.cpp $(SRCDIR)sample_step.hxx $(SRCDIR)parameters.hxx $(SRCDIR)sound_file_output.hxx $(SRCDIR)sound_output_buffer.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -D __OUTPUT_$(DEFAULTWAVE)_MODE__ -o $(BUILDDIR)main_loop_DW_$(DEFAULTWAVE).o $(SRCDIR)main_loop.cpp
 
-$(BUILDDIR)sound_jack_output.o			:	$(SRCDIR)sound_jack_output.hxx	$(SRCDIR)sound_jack_output.cpp $(SRCDIR)sound_output_buffer.hxx
+$(BUILDDIR)sound_jack_output.o			:	$(SRCDIR)sound_jack_output.hxx	$(SRCDIR)sound_jack_output.cpp $(SRCDIR)sound_base_output.hxx $(SRCDIR)main_loop.hxx $(SRCDIR)sound_jack_links.hxx $(SRCDIR)samplerate_handler.hxx
 ifeq ($(WITH_JACKAUDIO),YES)
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -D __WITH_JACK__ -o $(BUILDDIR)sound_jack_output.o $(SRCDIR)sound_jack_output.cpp
 else
@@ -53,28 +53,28 @@ endif
 $(BUILDDIR)sound_jack_links.o			:	$(SRCDIR)sound_jack_links.hxx	$(SRCDIR)sound_jack_links.cpp 
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)sound_jack_links.o $(SRCDIR)sound_jack_links.cpp
 
-$(BUILDDIR)sound_file_output.o			:	$(SRCDIR)sound_file_output.hxx	$(SRCDIR)sound_file_output.cpp $(SRCDIR)sound_output_buffer.hxx
+$(BUILDDIR)sound_file_output.o			:	$(SRCDIR)sound_file_output.hxx	$(SRCDIR)sound_file_output.cpp $(SRCDIR)sound_base_output.hxx $(SRCDIR)main_loop.hxx $(SRCDIR)samplerate_handler.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)sound_file_output.o $(SRCDIR)sound_file_output.cpp
 
-$(BUILDDIR)samplerate_handler.o			:	$(SRCDIR)samplerate_handler.hxx	$(SRCDIR)samplerate_handler.cpp $(SRCDIR)sound_output_buffer.hxx
+$(BUILDDIR)samplerate_handler.o			:	$(SRCDIR)samplerate_handler.hxx	$(SRCDIR)samplerate_handler.cpp
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)samplerate_handler.o $(SRCDIR)samplerate_handler.cpp
 
-$(BUILDDIR)params_io_handler.o			:	$(SRCDIR)parameters.hxx $(SRCDIR)params_io_handler.hxx $(SRCDIR)params_io_handler.cpp
+$(BUILDDIR)params_io_handler.o			:	$(SRCDIR)params_io_handler.hxx $(SRCDIR)params_io_handler.cpp $(SRCDIR)parameters.hxx $(SRCDIR)sound_output_buffer.hxx $(SRCDIR)params_input_midi.hxx $(SRCDIR)params_input_mnemos.hxx $(SRCDIR)params_output_txt.hxx $(SRCDIR)params_output_mnemos.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)params_io_handler.o $(SRCDIR)params_io_handler.cpp
 
-$(BUILDDIR)parameters.o			:	$(SRCDIR)parameters.hxx $(SRCDIR)parameters.cpp $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx
+$(BUILDDIR)parameters.o			:	$(SRCDIR)parameters.hxx $(SRCDIR)parameters.cpp $(SRCDIR)amplitude_handler.hxx 
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)parameters.o $(SRCDIR)parameters.cpp
 
-$(BUILDDIR)params_input_midi.o			:	$(SRCDIR)params_input_midi.hxx $(SRCDIR)params_input_midi.cpp $(SRCDIR)parameters.hxx $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx
+$(BUILDDIR)params_input_midi.o			:	$(SRCDIR)params_input_midi.hxx $(SRCDIR)params_input_midi.cpp $(SRCDIR)parameters.hxx $(SRCDIR)params_codes.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)params_input_midi.o $(SRCDIR)params_input_midi.cpp
 
-$(BUILDDIR)params_input_mnemos.o			:	$(SRCDIR)params_input_mnemos.hxx $(SRCDIR)params_input_mnemos.cpp $(SRCDIR)parameters.hxx $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx
+$(BUILDDIR)params_input_mnemos.o			:	$(SRCDIR)params_input_mnemos.hxx $(SRCDIR)params_input_mnemos.cpp $(SRCDIR)parameters.hxx $(SRCDIR)params_codes.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)params_input_mnemos.o $(SRCDIR)params_input_mnemos.cpp
 
-$(BUILDDIR)params_output_txt.o			:	$(SRCDIR)params_output_txt.hxx $(SRCDIR)params_output_txt.cpp $(SRCDIR)parameters.hxx $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx
+$(BUILDDIR)params_output_txt.o			:	$(SRCDIR)params_output_txt.hxx $(SRCDIR)params_output_txt.cpp $(SRCDIR)parameters.hxx $(SRCDIR)params_codes.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)params_output_txt.o $(SRCDIR)params_output_txt.cpp
 
-$(BUILDDIR)params_output_mnemos.o			:	$(SRCDIR)params_output_mnemos.hxx $(SRCDIR)params_output_mnemos.cpp $(SRCDIR)parameters.hxx $(SRCDIR)amplitude_handler.hxx $(SRCDIR)frequency_handler.hxx
+$(BUILDDIR)params_output_mnemos.o			:	$(SRCDIR)params_output_mnemos.hxx $(SRCDIR)params_output_mnemos.cpp $(SRCDIR)parameters.hxx $(SRCDIR)params_codes.hxx
 	$(CXX) -c $(CXXFLAGS) $(CXX_Version) -o $(BUILDDIR)params_output_mnemos.o $(SRCDIR)params_output_mnemos.cpp
 
 .PHONY	: $(BUILDDIR)sound_jack_output.o $(BUILDDIR)main.o
