--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@
 *.pdf  linguist-documentation
 *.cir  linguist-language=LTspice
 *.sch  linguist-detectable
-*.dot  linguist-detectable
+*.gv  linguist-detectable
